# pep621-project-dependencies

./: .gitignore  README.md  pyproject.toml
pep621_project_dependencies/: __main__.py  exceptions.py
pep621_project_dependencies/dependency/: __init__.py  types.py
pep621_project_dependencies/pep508/: parser.py
pep621_project_dependencies/pep508/grammars/: pep508.lark
pep621_project_dependencies/project/: metadata.py
tests/fixtures/: complete.toml
