[tool.poetry]
name = "pep621-project-dependencies"
version = "0.1.0"
description = "A sample library parsing and converting proposed dependency specification for PEP 621 from and to PEP 508"
readme = "README.md"
authors = ["Arun Babu Neelicattu <arun.neelicattu@gmail.com>"]

[tool.poetry.urls]
"PEP 621" = "https://www.python.org/dev/peps/pep-0621/"
"PEP 621 Discussion" = "https://discuss.python.org/t/pep-621-how-to-specify-dependencies/4599"
"Specification Discussion" = "https://discuss.python.org/t/dependency-specification-in-pyproject-toml-using-an-exploded-toml-table/5123"

[tool.poetry.scripts]
pep621-toml = "pep621_project_dependencies.__main__:main"

[tool.poetry.dependencies]
python = "^3.6"
toml = "^0.10.1"
lark-parser = "^0.9.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
